manifests/https/https-demox-one-aliu.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    opa-istio-injection: enabled
  name: https-demox

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    microservice: https-demox-app-1
  name: https-demox-app-1
  namespace: https-demox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-demox-app-1
  template:
    metadata:
      labels:
        app: https-demox-app-1
        microservice: https-demox-app-1
    spec:
      containers:
        - image: webratio/httpd-with-curl:2.4.29
          imagePullPolicy: IfNotPresent
          name: https-demox-app-1
          ports:
            - containerPort: 80
              name: http-default
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    microservice: https-demox-app-2
  name: https-demox-app-2
  namespace: https-demox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: https-demox-app-2
  template:
    metadata:
      labels:
        app: https-demox-app-2
        microservice: https-demox-app-2
    spec:
      containers:
        - image: webratio/httpd-with-curl:2.4.29
          imagePullPolicy: IfNotPresent
          name: https-demox-app-2
          ports:
            - containerPort: 80
              name: http-default
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    microservice: https-demox-app-1
  name: https-demox-app-1-svc
  namespace: https-demox
spec:
  ports:
  - name: http-default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: https-demox-app-1
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  labels:
    microservice: https-demox-app-2
  name: https-demox-app-2-svc
  namespace: https-demox
spec:
  ports:
  - name: http-default
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: https-demox-app-2
  type: LoadBalancer

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    microservice: https-demox-app-1
  name: https-demox-app-1-vs
  namespace: https-demox
spec:
  gateways:
  - istio-system/https-gateway
  - mesh
  hosts:
  - https-demox-app-1.sst.suse.lab
  http:
  - route:
    - destination:
        host: https-demox-app-1-svc.https-demox.svc.cluster.local
        port:
          number: 80
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    microservice: https-demox-app-2
  name: https-demox-app-2-vs
  namespace: https-demox
spec:
  gateways:
  - istio-system/https-gateway
  - mesh
  hosts:
  - https-demox-app-2.sst.suse.lab
  http:
  - route:
    - destination:
        host: https-demox-app-2-svc.https-demox.svc.cluster.local
        port:
          number: 80
