manifests/https/https-istio-one-se-aliu.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: https-route
  namespace: istio-system
spec:
  hosts:
  - "*.sst.suse.lab"
  location: MESH_INTERNAL
  ports:
  - name: https
    number: 443
    protocol: TLS
  resolution: DNS
  endpoints:
  - address: istio-ingressgateway.istio-system.svc.cluster.local
